--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,13 @@
 # POSTGRESQL
 DB_DIALECT=postgres
-DB_HOST=127.0.0.1
+DB_HOST=localhost
 DB_PORT=5432
-DB_USER=postgres
-DB_PASS=postgres
+DB_USER=root
+DB_PASS=
 DB_NAME=intelbras
+
+JWT_SECRET=
+TOKEN_SECRET=
+
+GOOGLE_CLIENTE_ID=
+GOOGLE_CLIENTE_SECRET=
